--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <div id="root"></div>
 
-    <script type="text/babel" src="react.js"></script>
+    <!-- <script type="text/babel" src="react.js"></script> -->
+    <script type="text/babel" src="react-jsx.js"></script>
   </body>
 </html>
